[project]

name = "qgate_perf"  # Required

dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

description = "Performance test generator, part of Quality Gate"  # Optional

requires-python = ">=3.6"

license = {file = "LICENSE"}

keywords = ["PerformanceTest", "Performance", "QualityGate"]    # Optional

authors = [
  {name = "Jiri Steuer", email = "steuer.jiri@gmail.com" }      # Optional
]
maintainers = [
  {name = "Jiri Steuer", email = "steuer.jiri@gmail.com" }      # Optional
]

classifiers = [  # Optional
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
]

[project.urls]  # Optional
homepage='https://github.com/george0st/qgate-perf/'
repository='https://pypi.org/project/qgate_perf/'
#"Homepage" = 'https://github.com/george0st/qgate-perf/'
#download_url='https://pypi.org/project/qgate_perf/'
#"Source" = "https://github.com/pypa/sampleproject/"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

#[tool.setuptools]
#include-package-data = false
#
#[tool.setuptools.packages.find]
#include = ["qgate_perf*"]
#exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "qgate_perf.__version__"}
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["dev-requirements.txt"] }

